--- a/dangnhap.html
+++ b/dangnhap.html
@@ -18,13 +18,13 @@
       <!--thiet ke noi dung tieu de dau trang tai day  -->
       <nav>
         <p>
-          <a href="trangchu.html" target="" title="Trang chủ"> Trang chủ </a>
-          <a href="url" target="" title="Giới thiệu"> Giới thiệu </a>
-          <a href="url" target="" title="Sản phẩm"> Sản phẩm </a>
-          <a href="url" target="" title="Tin tức"> Tin tức </a>
-          <a href="url" target="" title="Đăng nhập"> Đăng nhập </a>
-          <a href="url" target="" title="Đăng ký"> Đăng ký </a>
-          <a href="url" target="" title="Liên hệ"> Liên hệ </a>
+          <a href="index.html" target="" title="Trang chủ"> Trang chủ </a>
+          <a href="" target="" title="Giới thiệu"> Giới thiệu </a>
+          <a href="sanpham.html" target="" title="Sản phẩm"> Sản phẩm </a>
+          <a href="tintuc.html" target="" title="Tin tức"> Tin tức </a>
+          <a href="dangnhap.html" target="" title="Đăng nhập"> Đăng nhập </a>
+          <a href="dangky.html" target="" title="Đăng ký"> Đăng ký </a>
+          <a href="" target="" title="Liên hệ"> Liên hệ </a>
         </p>
 
         <!--thiet ke thanh dieu huong tai day  -->
@@ -69,9 +69,7 @@
             </td>
           </tr>
           <tr>
-            <td>
-              
-            </td>
+            <td></td>
           </tr>
         </table>
       </fieldset>
