--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <nav>
         <p>
           <a href="trangchu.html" target="" title="Trang chủ"> Trang chủ </a>
-          <a href="url" target="" title="Giới thiệu"> Giới thiệu </a>
-          <a href="url" target="" title="Sản phẩm"> Sản phẩm </a>
-          <a href="url" target="" title="Tin tức"> Tin tức </a>
-          <a href="url" target="" title="Đăng nhập"> Đăng nhập </a>
-          <a href="url" target="" title="Đăng ký"> Đăng ký </a>
+          <a href="" target="" title="Giới thiệu"> Giới thiệu </a>
+          <a href="sanpham.html" target="" title="Sản phẩm"> Sản phẩm </a>
+          <a href="tintuc.html" target="" title="Tin tức"> Tin tức </a>
+          <a href="dangnhap.html" target="" title="Đăng nhập"> Đăng nhập </a>
+          <a href="dangky.html" target="" title="Đăng ký"> Đăng ký </a>
           <a href="url" target="" title="Liên hệ"> Liên hệ </a>
         </p>
         
