--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--thiet ke noi dung tieu de dau trang tai day  -->
       <nav>
         <p>
-          <a href="index.html" target="" title="Trang chủ"> Trang chủ </a>
+          <a href="https://triutai.github.io/TriuTanTai/" target="" title="Trang chủ"> Trang chủ </a>
           <a href="" target="" title="Giới thiệu"> Giới thiệu </a>
           <a href="sanpham.html" target="" title="Sản phẩm"> Sản phẩm </a>
           <a href="tintuc.html" target="" title="Tin tức"> Tin tức </a>
